welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:13: error: ';' expected but 'return' found.
	     } return vuBiscuit
               ^